# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  travis.yml
brain_games/engines/: __init__.py  cli.py  simple_3_round.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
