[tool.poetry]
name = "aa989190f363e46d_brain_games"
version = "0.2.0"
description = "hexlet brain games"
authors = ["aa989190f363e46d"]
packages = [
    { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
prompt = "^0.4"
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"